# wordle-solved

./: .gitignore  AutoMode.cpp  AutoMode.h  CMakeLists.txt  Display.cpp  Display.h  Dockerfile  Entropy.cpp  Entropy.h  Feedback.cpp  Feedback.h  InteractiveMode.cpp  InteractiveMode.h  ThreadPool.h  app.py  benchmark.py  entropy.py  feedback.py  model.pt  model.py  readme.md  requirements.txt  theory.md  wordle.cpp  wordle.py  words.h
.github/workflows/: codeql.yml
JSON/: entropy.json
